--- a/readme
+++ b/readme
@@ -1,17 +1,17 @@
 itrashcan 一个简易的Linux回收站
-1. 在```~/.bashrc```中粘贴下面的设置环境变量, 并执行```source ~/.bashrc```, 或者重新打开终端
-    ```
+1. 在`~/.bashrc`中粘贴下面的设置环境变量, 并执行`source ~/.bashrc`, 或者重新打开终端
+    `
     # itrashcan
     export itrashcan="/home/szw/repos/itrashcan" # set the script path
     export itrashcan_home="/home/szw/.trashcan" # set the transcan path
     source "$itrashcan/config.sh" # source the config for alias
-    ```
+    `
 1. 初始化itrashcan
-    ```
+    `
     bash $itrashcan/init.sh
-    ```
+    `
 1. 查看config.sh中的命令别名
-    ```
+    `
     # set alias
     # rm by itrashcan
     alias rm="$itrashcan/delete.sh"
@@ -23,4 +23,4 @@ itrashcan 一个简易的Linux回收站
     alias gor="cd $itrashcan_home/trash"
     # get the size of trashcan
     alias rsize="du -sh $itrashcan_home/trash"
-    ```
+    `
